# gfetch_web

./: .gitignore  README.md  app.py  env-template  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  retrieve_emails.py  tailwind.config.js
helpers/: clean_emails.py
src/app/: app.py  auth.py  emails.py  retrieve_emails.py
src/app/helpers/: clean_emails.py
src/app/static/css/: tailwind.css
src/app/templates/: index.html
templates/: index.html
tests/: conftest.py  raw_many_attachments.eml  raw_no_attachments.eml  raw_one_attachment.eml  test_credentials.py  test_delete.py  test_emails.py  test_index.py  test_misc.py  test_routes.py
